add js chunks for inertia react

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=777bdf7f799f7fc63d0492b6762572d9",
+    "/css/app.css": "/css/app.css?id=250ccc1cbacc4fdcf785bd8d38127c68"
 }
