--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.17.12",
         "@popperjs/core": "^2.10.2",
+        "@types/lodash": "^4.14.182",
         "axios": "^0.25",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
@@ -21,13 +22,17 @@
         "react-dom": "^18.2.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4"
     },
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
         "@inertiajs/progress": "^0.2.7",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
         "react-toastify": "^9.0.5"
     }
 }
